# mwf

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: README.md  decorator.rs  decorators.rs  file_browser.rs  hello_world.rs  markdown.md  markdown.rs  simple_portal.rs  simple_server.rs
src/: builder.rs  decorator.rs  error.rs  handle.rs  lib.rs  main.rs  mwf.rs  request_handler.rs  resolution.rs  routing.rs  server.rs  view.rs
