[package]
name = "mwf"
version = "0.1.0"
authors = ["addonovan <austin@addonovan.com>"]

[[example]]
name = "hello_world"

[[example]]
name = "file_browser"

[[example]]
name = "simple_portal"

[[example]]
name = "markdown"

[dependencies]
iron = "0.6"
pulldown-cmark = { version = "0.0.11", deafult-features = false }
