[package]
name = "mwf"
version = "0.1.0"
authors = ["addonovan <austin@addonovan.com>"]

[dependencies]
hyper = "0.11"
pulldown-cmark = { version = "0.0.11", deafult-features = false }



[[example]]
name = "hello_world"

[[example]]
name = "file_browser"

[[example]]
name = "simple_portal"

[[example]]
name = "markdown"

[[example]]
name = "decorator"
